[gd_scene load_steps=5 format=2]

[ext_resource path="res://HurtArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.537

[sub_resource type="CircleShape2D" id=2]

[node name="PlayerBullet" instance=ExtResource( 1 )]
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="BounceArea" type="Area2D" parent="." index="1"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea" index="0"]
shape = SubResource( 2 )

[node name="BounceRay" type="Node2D" parent="." index="2"]

[node name="Right" type="RayCast2D" parent="BounceRay" index="0"]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Down" type="RayCast2D" parent="BounceRay" index="1"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Left" type="RayCast2D" parent="BounceRay" index="2"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Up" type="RayCast2D" parent="BounceRay" index="3"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 50, 0 )

[connection signal="body_entered" from="BounceArea" to="." method="_on_BounceArea_body_entered"]
